feat: automate documentation loading
* Add component description to context

* Add component anchor to documentation page link